Limited ramp angle to 80 degrees
Fixed: Mystery object does not break apart.
Made it so you can't zoom out the graphs further than 20 seconds by graying out the horizontal zoom buttons, see #2361
Made it so that dragging the rightmost wall rotates the ramp angle.
Made sure energy is exactly conserved while object is airborne
Fixed: Kinetic energy doesn't update while object is in the air on bar chart or line chart
Removed point of origin vector visualization option from the control panel.
Fixed: during playback, value readouts to the left of chart do not update
Set the cursor to be a hand in the free body diagram node
Moved the "show energy graph" button to the play area, and made it disappear when the chart appears
Renamed Ramp to Ramp II: Forces in 2D, resolves #2054
# 1.03.64 (40652) May 12, 2010
Made coordinate frame graphic handle grabbable
Added a handle to the coordinate frame graphic
Improved fonts and shadowing for force arrow labels.
# 1.03.63 (37564) Dec 16, 2009
Made it so the "Return Object" button appears when the object is crashed, not only when the object is offscreen
Made it so that objects appear broken after crashing
Added an invisible wall to the left hand side of the game modes so that objects can't be pushed beyond the edge of the leftmost ramp segment.
Improve layout for vector arrow labels.
Made it so that force vector labels must be at least a specified minimum distance from the origin.
For the game modes, changed the grabbing area from "center of object is anywhere in front of house" to "center of object is within 15% of the door area".
Added on-screen instructions to game modes.
Unpause the sim before modifying the applied force, since the go button is supposed to stay invisible if the user starts the sim by dragging the object
Added a clear button to the charts.  They are only visible when the sim can be cleared.
# 1.03.62 (36607) Nov 13, 2009
Added the object selection combo box to the test scenario, see #1880