@@ -1,3 +1,4 @@
+Limited coordinate frame angle to 80 degrees
 Limited ramp angle to 80 degrees
 Fixed: Mystery object does not break apart.
 Made it so you can't zoom out the graphs further than 20 seconds by graying out the horizontal zoom buttons, see #2361
